# ecommerce_datalake_pipelines

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  RESOURCE_HUB.md  constraints.txt  coverage.xml  docker-compose.yml  docker.env.gcs.example  docker.env.local.example  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: dbt-validation.yml  docker-build.yml  pipeline-e2e.yml  python-quality.yml  release.yml
airflow/dags/: common.py  ecom_dim_refresh.py  ecom_silver_to_gold.py
apps/: charts.py  data_loader.py  streamlit_dashboard.py
config/: config.yml
config/specs/: bronze.yml  dims.yml  enriched.yml  silver_base.yml  validation.yml
dbt_bigquery/: .user.yml  dbt_project.yml  profiles.yml
dbt_bigquery/models/: sources.yml
dbt_duckdb/: .user.yml  dbt_project.yml  profiles.yml
dbt_duckdb/macros/: cleaning_utils.sql  export_parquet.sql  source_parquet.sql
dbt_duckdb/models/: sources.yml
dbt_duckdb/tests/: orders_net_le_gross.sql
docs/data/: BRONZE_PROFILE_REPORT.md  BRONZE_PROFILE_SPOT_CHECKS.md  BRONZE_SCHEMA_MAP.json  BRONZE_SIZES.md  DATA_CONTRACT.md  DATA_DICTIONARY.md
docs/future_state/: INCREMENTAL_DAILY_SIMULATOR.md
docs/planning/: ARCHITECTURE_SUMMARY.md  AUDIT_SCHEMA.md  BQ_MIGRATION.md  DECISIONS.md  ENRICHED_SILVER_STRATEGY.md  INTENT.md  SILVER_FRAMEWORK.md  SILVER_PLAN.md  TESTING_RUNBOOK.md
docs/resources/: ARCHITECTURE.md  CLI_USAGE_GUIDE.md  CONFIG_STRATEGY.md  DEPLOYMENT_GUIDE.md  DOCKER_VERSIONING.md  ENVIRONMENT_VARIABLE_STRATEGY.md  OBSERVABILITY_STRATEGY.md  PERFORMANCE_TUNING.md  RUNBOOK.md  SLA_AND_QUALITY.md  SPEC_OVERVIEW.md  TESTING_GUIDE.md  TRANSFORMATION_SUMMARY.md  VALIDATION_GUIDE.md
docs/validation_reports/: README.md
ml/: customer_segmentation.py  feature_prep.py  inventory_risk_ranker.py  retention_risk_scoring.py
scripts/: README.md  bootstrap_airflow.sh  describe_parquet_samples.py  package_bronze_sample.py  pull_bronze_sample.sh  report_bronze_sizes.sh  run_dev_pipeline.sh  run_dims_from_spec.py  run_enriched_all_samples.py  run_sim_prod_gcs.sh  validate_bronze_samples.py  version.py
scripts/adhoc/: check_customer_fk_coverage.py  expand_bronze_samples.sh  inspec_returns.py  inspect_cart_items_spikes.py  inspect_cart_items_spikes_all.py  parquet_run_scan.py  parquet_sanity_checks.py  spot_check_bronze_profiles.py  update_footers.py
src/: exceptions.py  settings.py
src/cli/: __init__.py  app.py
src/observability/: README.md  __init__.py  audit.py  config.py  metrics.py  structured_logging.py
src/runners/: __init__.py  base_silver.py  dims_snapshot.py  enriched_silver.py  manifest.py  mock_bq_load.py
src/specs/: __init__.py  loader.py  models.py
src/transforms/: cart_attribution.py  churn_detection.py  common.py  customer_lifetime_value.py  daily_business_metrics.py  inventory_risk.py  product_performance.py  regional_financials.py  sales_velocity.py  shipping_economics.py
src/validation/: base_silver_schemas.py  bronze_quality.py  common.py  dims_snapshot.py  enriched_schemas.py  quality.py  schemas.py
tests/: conftest.py
tests/integration/: __init__.py  test_bronze_to_enriched.py  (+1 more)
(+89 files in other folders)
